--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@ cmake_minimum_required(VERSION 3.8)
 # that are appropriate for your development environment.
 set(NormalSystemLibraries "/usr/lib64")
 set(WaylandLibraries "/usr/lib64")
-set(VulkanSDKLibraries "/home/dkaip/Downloads/VulkanSDK/1.1.121.0/x86_64/lib")
+set(VulkanSDKLibraries "/home/dkaip/Downloads/VulkanSDK/1.1.126.0/x86_64/lib")
 
 set(JNIHeaders1 "/usr/lib/jvm/java-1.8.0/include/linux")
 set(JNIHeaders2 "/usr/lib/jvm/java-1.8.0/include")
 
-set(VulkanSDKHeaders "/home/dkaip/Downloads/VulkanSDK/1.1.121.0/x86_64/include")
+set(VulkanSDKHeaders "/home/dkaip/Downloads/VulkanSDK/1.1.126.0/x86_64/include")
 
 set(WaylandHeaders "/home/dkaip/wayland/wayland-1.16.92/src")
 
@@ -36,7 +36,7 @@ target_include_directories(jvulkan-natives-Linux-x86_64 PRIVATE ./headers)
 target_include_directories(jvulkan-natives-Linux-x86_64 PRIVATE ${JNIHeaders1})
 target_include_directories(jvulkan-natives-Linux-x86_64 PRIVATE ${JNIHeaders2})
 
-# Headers for Vulkan SDK, currently 1.1.121.0
+# Headers for Vulkan SDK, currently 1.1.126.0
 target_include_directories(jvulkan-natives-Linux-x86_64 PRIVATE ${VulkanSDKHeaders})
 
 # Headers for Wayland stuff
@@ -75,17 +75,27 @@ target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE vulkan)
 #target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_unique_objects)
 #target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_vktrace_layer)
 # For 106
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_api_dump)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_assistant_layer)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_core_validation)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_api_dump)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_assistant_layer)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_core_validation)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_demo_layer)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_device_simulation)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_khronos_validation)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_monitor)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_object_lifetimes)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_screenshot)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_starter_layer)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_stateless_validation)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_thread_safety)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_unique_objects)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_vktrace_layer)
+# For 126
+target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_starter_layer)
+target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_vktrace_layer)
 target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_demo_layer)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_device_simulation)
 target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_khronos_validation)
 target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_monitor)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_object_lifetimes)
+target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_api_dump)
 target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_screenshot)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_starter_layer)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_stateless_validation)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_thread_safety)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_unique_objects)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_vktrace_layer)
+target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_device_simulation)
+
