--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,17 @@ set(WaylandHeaders "/home/dkaip/wayland/wayland-1.16.92/src")
 # Now get on with business and get the library built
 project(jvulkan-natives-Linux-x86_64)
 
+find_library(VULKAN_SDK_NATIVE_LIBRARIES
+	NAMES 	vulkan
+		VkLayer_starter_layer
+		VkLayer_vktrace_layer
+		VkLayer_khronos_validation 
+		VkLayer_monitor 
+		VkLayer_api_dump 
+		VkLayer_screenshot PATHS ${VulkanSDKLibraries} NO_DEFAULT_PATH)
+
+find_library(WAYLAND_LIBRARIES NAMES wayland-client PATHS ${WaylandLibraries})
+
 # The additional / is important to remove the last character from the path.
 # Note that it does not matter if the OS uses / or \, because we are only
 # saving the path size.
@@ -24,9 +35,6 @@ add_definitions("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
 
 file(GLOB vulkan_natives_sources ./*.cpp ./*/*.cpp)
 set(vulkan_natives_srcs ${vulkan_natives_sources}) 
-
-# Add link library paths, BTW, this line needs to be before the add_library line below
-link_directories(${NormalSystemLibraries} ${WaylandLibraries} ${VulkanSDKLibraries})
 
 add_library(jvulkan-natives-Linux-x86_64 SHARED ${vulkan_natives_srcs})
 
@@ -43,10 +51,11 @@ target_include_directories(jvulkan-natives-Linux-x86_64 PRIVATE ${VulkanSDKHeade
 target_include_directories(jvulkan-natives-Linux-x86_64 PRIVATE ${WaylandHeaders})
 
 # Add wayland modules
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE wayland-client)
+target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE ${WAYLAND_LIBRARIES})
 
 # Add vulkan modules
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE vulkan)
+target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE ${VULKAN_SDK_NATIVE_LIBRARIES})
+
 # for 85
 #target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_api_dump)
 #target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_assistant_layer)
@@ -90,12 +99,12 @@ target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE vulkan)
 #target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_unique_objects)
 #target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_vktrace_layer)
 # For 126
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_starter_layer)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_vktrace_layer)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_demo_layer)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_khronos_validation)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_monitor)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_api_dump)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_screenshot)
-target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_device_simulation)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_starter_layer)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_vktrace_layer)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_demo_layer)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_khronos_validation)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_monitor)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_api_dump)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_screenshot)
+#target_link_libraries(jvulkan-natives-Linux-x86_64 PRIVATE VkLayer_device_simulation)
 
